# scrapper

./: pyproject.toml  scrapy.cfg
infolibras/: items.py  middlewares.py  pipelines.py  settings.py
infolibras/spiders/: ditech.py  douglasgaspar.py  juliobattisti.py
