[tool.poetry]
name = "infolibras"
version = "0.1.0"
description = ""
authors = ["Vitor Daniel <vitor036daniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
Scrapy = "^2.11.0"
mysql-connector-python = "^8.2.0"
python-dotenv = "^1.0.0"
typesense = "^0.18.0"
python-slugify = "^8.0.1"
openai = "^1.3.9"
numpy = "^1.26.2"
msgspec = "^0.18.6"
pypika = "^0.48.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
